# nitrostack-python-sdk

./: PYTHON_SDK_SPEC.md  README.md  nitrostudio.py  pyproject.toml
.github/workflows/: test.yml
examples/: calculator_server.py  flight_booking_server.py  food_order_server.py  main.py
my-test-server/: app_module.py  compute_average_tool.py  data_analysis_module.py  main.py  requirements.txt
my-test-server/modules/calculator/: calculator_module.py  calculator_service.py  calculator_tools.py
nitrostack/: __init__.py  studio.py
nitrostack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nitrostack/auth/: api_key.py  config.py  jwt.py  oauth.py
nitrostack/cli/: main.py
nitrostack/core/: additional_decorators.py  app.py  context.py  decorators.py  di.py  errors.py  module.py  pipeline.py  task.py
nitrostack/events/: event_emitter.py
nitrostack/static/: styles.css
nitrostack/testing/: __init__.py
nitrostack/transports/: stdio.py
scratch/: test_mcp_init_direct.py
scratch/test-flight/: app_module.py
scratch/test-flight/modules/flight_booking/: flight_booking_module.py  flight_booking_service.py  flight_booking_tools.py
scratch/test-food/: app_module.py
scratch/test-food/modules/food_delivery/: food_delivery_module.py  food_delivery_service.py  food_delivery_tools.py
static/: app.js  index.html
tests/: test_basic.py  test_initial_tool.py  test_oauth.py  test_production.py  test_tasks.py
