[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nitrostack"
version = "0.3.1"
description = "NitroStack Python SDK — A Python-idiomatic port of the NitroStack MCP framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "starlette>=0.30.0",
    "uvicorn>=0.20.0",
    "watchfiles>=0.18.0"
]

[project.scripts]
nitrostack-py = "nitrostack.cli.main:main"
nitrostack-studio = "nitrostack.studio:start_server_cli"

[tool.setuptools.packages.find]
include = ["nitrostack*"]

[tool.setuptools.package-data]
nitrostack = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
